ci: Add PortAudio system dependencies for CI build

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,10 @@ dependencies = [
     "python-dotenv>=1.1.1",
 ]
 
+# System dependencies for PyAudio
+[project.system-dependencies]
+pyaudio = ["portaudio19-dev"]
+
 [project.optional-dependencies]
 dev = [
     "pytest",
