--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,7 +38,7 @@ jobs:
           name: Install dependencies
           command: |
             source $BASH_ENV
-            uv sync --extra dev
+            uv sync --extra dev,openai
       
       # Save cache
       - save_cache:
@@ -52,7 +52,7 @@ jobs:
           name: Run tests
           command: |
             source $BASH_ENV
-            uv run pytest --cov=src --cov-report=term-missing --cov-fail-under=90
+            uv run pytest --cov=src --cov-report=term-missing --cov-fail-under=80
       
       # Store test results and coverage
       - store_test_results:
@@ -67,13 +67,6 @@ jobs:
     steps:
       - checkout
       
-      # Install system dependencies for PyAudio
-      - run:
-          name: Install system dependencies
-          command: |
-            sudo apt-get update
-            sudo apt-get install -y portaudio19-dev
-      
       # Install uv
       - run:
           name: Install uv
@@ -87,7 +80,7 @@ jobs:
           name: Install dependencies
           command: |
             source $BASH_ENV
-            uv sync --extra dev
+            uv sync --extra dev,openai
       
       # Run ruff linting
       - run:
@@ -109,13 +102,6 @@ jobs:
     steps:
       - checkout
       
-      # Install system dependencies for PyAudio
-      - run:
-          name: Install system dependencies
-          command: |
-            sudo apt-get update
-            sudo apt-get install -y portaudio19-dev
-      
       # Install uv
       - run:
           name: Install uv
@@ -129,7 +115,7 @@ jobs:
           name: Install dependencies
           command: |
             source $BASH_ENV
-            uv sync --extra dev
+            uv sync --extra dev,openai
       
       # Build the package
       - run:
