--- a/src/mAIgic_core/pyproject.toml
+++ b/src/mAIgic_core/pyproject.toml
@@ -1,7 +1,8 @@
 [project]
-name = "speech-api"
+name = "maigic-core"
 version = "0.1.0"
-description = "Speech API - Interface definitions for speech processing"
+description = "mAIgic Core Component - Central assistant logic and orchestration"
+readme = "README.md"
 requires-python = ">=3.12"
 dependencies = []
 
@@ -10,4 +11,4 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["."]
+packages = ["mAIgic_core"] 
