feat: implement email API interface with Gmail client and uv workspace structure

--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,16 @@ __pycache__/
 *$py.class
 *DS_Store
 .cursor/
+token.json
 
 # C extensions
 *.so
+
+# Gmail Credentials (Email Integration)
+credentials.json
+token.pickle
+*.pickle
+gmail_credentials.env
 
 # Distribution / packaging
 .Python
