--- a/src/mAIgic_integrations/pyproject.toml
+++ b/src/mAIgic_integrations/pyproject.toml
@@ -1,14 +1,23 @@
 [project]
 name = "maigic-integrations"
 version = "0.1.0"
-description = "mAIgic Integrations Component - External service integrations"
-readme = "README.md"
+description = "mAIgic Integrations - Meta-package for all integrations"
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    "maigic-core>=0.1.0",
+    "maigic-email-api>=0.1.0",
+]
+
+# Workspace sources are defined in root pyproject.toml
+
+[project.optional-dependencies]
+gmail = [
+    "maigic-email-gmail>=0.1.0",
+]
 
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["mAIgic_integrations"] 
+packages = ["mAIgic_integrations"]
