--- a/src/mAIgic_speech/pyproject.toml
+++ b/src/mAIgic_speech/pyproject.toml
@@ -1,12 +1,18 @@
 [project]
 name = "maigic-speech"
 version = "0.1.0"
-description = "mAIgic Speech Component - Complete speech processing capabilities"
-readme = "README.md"
+description = "mAIgic Speech - Meta-package for speech processing capabilities"
 requires-python = ">=3.12"
 dependencies = [
-    "aiohttp>=3.8.0",
-    "websockets>=11.0.0",
+    "maigic-core>=0.1.0",
+    "maigic-speech-api>=0.1.0",
+]
+
+# Workspace sources are defined in root pyproject.toml
+
+[project.optional-dependencies]
+openai = [
+    "maigic-speech-openai-impl>=0.1.0",
 ]
 
 [build-system]
@@ -14,4 +20,4 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["mAIgic_speech"] 
+packages = ["mAIgic_speech"]
