--- a/src/mAIgic_integrations/calendar/pyproject.toml
+++ b/src/mAIgic_integrations/calendar/pyproject.toml
@@ -1,28 +1,24 @@
 [project]
-name = "maigic-integrations"
+name = "maigic-calendar"
 version = "0.1.0"
-description = "mAIgic Integrations - Meta-package for all integrations"
+description = "mAIgic Calendar - Meta-package for calendar integration capabilities"
 requires-python = ">=3.12"
 dependencies = [
     "maigic-core>=0.1.0",
-    "maigic-email-api>=0.1.0",
     "maigic-calendar-api>=0.1.0",
 ]
 
 # Workspace sources are defined in root pyproject.toml
 
-[project.optional-dependencies]
-gmail = [
-    "maigic-email-gmail>=0.1.0",
-]
-
-calendar = [
-    "maigic-calendar>=0.1.0",
-]
+# [project.optional-dependencies]
+# Future provider implementations will be added here
+# google = [
+#     "maigic-calendar-google>=0.1.0",
+# ]
 
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["mAIgic_integrations"]
+packages = ["calendar"] 
